phase2-gitops-argocd/gitops-repo/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aspnetapp  # overridden per overlay via namePrefix/namespace field
  labels:
    app.kubernetes.io/managed-by: argocd
