phase2-gitops-argocd/gitops-repo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetapp
  labels:
    app: aspnetapp
spec:
  selector:
    app: aspnetapp
  ports:
    - name: http
      port: 8080
      targetPort: 8080
