phase2-gitops-argocd/gitops-repo/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: aspnetapp
  labels:
    app: aspnetapp
spec:
  to:
    kind: Service
    name: aspnetapp
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
